--- a/render.yaml
+++ b/render.yaml
@@ -2,8 +2,9 @@ services:
   - type: web
     name: financial-dashboard-backend
     env: node
-    buildCommand: cd server && npm install && npm run build
-    startCommand: cd server && npm start
+    rootDir: server
+    buildCommand: npm install
+    startCommand: npm run dev
     envVars:
       - key: PORT
         value: 8080
@@ -15,14 +16,15 @@ services:
         sync: false
     autoDeploy: true
     plan: free
-    rootDir: server
 
   - type: web
     name: financial-dashboard-frontend
     env: static
-    buildCommand: cd client && npm install && npm run build
-    staticPublishPath: client/build
-    envVars: []
+    rootDir: client
+    buildCommand: npm install && npm run build
+    staticPublishPath: build
+    envVars:
+      - key: VITE_API_URL
+        sync: false
     autoDeploy: true
     plan: free
-    rootDir: client
